--- a/working/Makefile
+++ b/working/Makefile
@@ -6,35 +6,29 @@
 #    By: souaret <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/15 12:06:38 by souaret           #+#    #+#              #
-#    Updated: 2024/05/17 12:31:36 by souaret          ###   ########.fr        #
+#    Updated: 2024/05/20 16:31:39 by souaret          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 
-OBJS = objs
-SRCS = srcs
-INCL = includes
+CC = cc
 
-CC = gcc
-CC := @$(CC)
+CFLAGS= -Wall -Wextra -Werror -I./$(INCL)
 
-CFLAGS = -Wall -Wextra -Werror -I./$(INCL)
+SRC   =	ft_atoi.c ft_isalpha.c ft_isalnum.c	 ft_isascii.c	ft_isdigit.c \
+		ft_isprint.c ft_tolower.c ft_toupper.c ft_tolower.c\
+		ft_strlen.c
 
-SRC    = ft_putchar.c ft_putstr.c ft_strcmp.c ft_strlen.c     \
-		 ft_swap.c
-
-SRC := $(addprefix $(SRCS)/, $(SRC))
-OBJ = $(patsubst %.c, %.o,$(SRC))
+OBJ = $(SRC:.c=.o)
 
 all: $(NAME)
 
 $(OBJS)/%.o: %.c
-	@mkdir -p $(@D)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJ)
-	ar -rc $(NAME) $(OBJ)
+	ar -rcs $(NAME) $(OBJ)
 	@rm -rf $(OBJ)
 
 
@@ -47,7 +41,13 @@ fclean: clean
 re: fclean all
 
 norm:
-	norminette $(SRCS) | more
-	norminette $(INCL) | more
+	norminette $(SRC) | more
+
+test:	all
+	$(CC) $(CFLAGS) ../Libft-main.c libft.a -o libft_test
+	./libft_test
+
+retest:
+	rm -f libft_test
 
 .PHONY: re fclean clean all norm
